# algo

./: .gitignore  CMakeLists.txt  template_cf.cpp  template_usaco.cpp  yoink.py  yoink_prompt.py
.competitive-verifier/: config.toml
.competitive-verifier/bundled/: template_cf.cpp  template_usaco.cpp
.github/workflows/: config.toml  verify.yml
.verify-helper/: config.toml
data-structures/: SegmentTree.h
misc/: 2sat.h
number-theory/: modint.h
stress-test/data-structures/: LazySegmentTree.test.cpp  SegmentTree.test.cpp  UnionFind.test.cpp
testing/data-structures/: SegmentTree.test.cpp  SparseTable.test.cpp
testing/math/: Binom.test.cpp
testing/misc/: 2sat.test.cpp
verify/data-structures/: SegmentTree.test.cpp  SparseTable.test.cpp  UnionFind.test.cpp  dsu.test.cpp  fenwick.test.cpp  lazy_segtree.range_affine_range_sum.test.cpp  lazy_segtree.test.cpp  li_chao_tree.line_add_get_min.test.cpp  offline_dynamic_connectivity.test.cpp  range_kth_smallest.test.cpp  segtree.point_set_range_composite.test.cpp  segtree.test.cpp  sparse_segtree.point_set_range_composite_large.test.cpp  sparse_table.test.cpp  splay_tree.aizu.raq.test.cpp  splay_tree.aizu.rsq_and_raq.test.cpp  splay_tree.aizu.ruq.test.cpp  splay_tree.dynamic_sequence_range_affine_range_sum.test.cpp  splay_tree.point_add_range_sum.test.cpp  splay_tree.range_affine_range_sum.test.cpp  treap.aizu.raq.test.cpp  treap.aizu.rsq_and_raq.test.cpp  treap.aizu.ruq.test.cpp  treap.dynamic_sequence_range_affine_range_sum.test.cpp  treap.persistent_range_affine_range_sum.test.cpp  (+2 more)
verify/graph/: dijsktra.test.cpp  (+2 more)
(+36 files in other folders)
